# hackathon_ynov

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSIGNES.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
datasets/: medical_dataset_raw.json
docs/: BRIEF.md
model_repository/phi35_financial/1/: model.py
ollama_server/: Modelfile
rendu/: 00-pilotage.md  presentation.md
rendu/cyber/: INDEX.md  RAPPORT_SECURITE.md  README.md
rendu/cyber/proofs/: backdoor_live_output.txt  dataset_poisoning_evidence.json
rendu/cyber/robustness/: Modelfile.test  RAPPORT_ROBUSTESSE.md  robustness_tests.py
rendu/cyber/scripts/: audit_datasets.py  poc_backdoor.py
rendu/data/: README.md  audit_finance_datasets.py  clean_medical_dataset.py  load_medical_dataset.py  rapport_qualite_donnees_finance.md  rapport_qualite_donnees_medical.md  rapport_qualite_données_finance.md  raw_analysis.json
rendu/devweb/: README.md  app.py
rendu/devweb/web/: README.md  package-lock.json  package.json  (+1 more)
rendu/ia/: README.md  phi3_analysis.md  run_phi3_api.py
rendu/infra/: .env.example  PREUVES.md  README.md
scripts/: dev.py  path_utils.py  phi3_analysis.md  requirements.txt  run_phi3_api.py  simple_chat.py  train_finance_model.py
tests/: test_path_resolution.py
tritton_server/: Dockerfile  README.md  docker-compose.yml
(+27 files in other folders)
